# vscode_ansible

./: Makefile  ansible.cfg  playbook.yml  pyproject.toml  vscode_ansible.code-workspace
inventories/: test_incus.yaml
module_args/: incus_instance.json  incus_instance_info.json  incus_network.json  incus_network_info.json  incus_profile.json
