[tool.poetry]
name = "vscode_ansible"
version = "0.1.0"
description = "VSCode Ansible python dependencies"
authors = ["Todor Tsankov <tushe@visdigita.net>"]
packages = []

[tool.poetry.dependencies]
python = "^3.11"
ansible = "^9.3.0"
q = "^2.7"
molecule = "^24.2.0"
molecule-plugins = {extras = ["docker"], version = "^23.5.3"}
pytest = "^8.1.1"


[tool.poetry.group.dev.dependencies]
mypy = "^0.981"
black = {version = "^22.8.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
